--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
   <body>
     <h1>My First Heading</h1>
+    
+    <h2>This is my Second Heading</h2>
 
-    <p>My First Paragraph.</p>
+    <p>This is My First Paragraph.</p>
+
+    <p>This is another paragraph</p>
   </body>
 </html>
