ADD link and image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
   <body>
     <h1>My First Heading</h1>
-    
+
     <h2>This is my Second Heading</h2>
 
     <p>This is My First Paragraph.</p>
 
     <p>This is another paragraph</p>
+    <a href="https://www.rmit.edu.vn/"> RMIT UNIVERSITY WEBSITE </a>
+    <img src="https://www.rmit.edu.vn/content/dam/rmit/vn/en/assets-for-production/images/news/news-masthead-summit-fosters-australia-vietnam-cooperation-in-digital-education.jpg">
   </body>
 </html>
